# simple_storage

./: .dockerignore  Cargo.toml  docker-compose.yml  readme.md
docs/: merkle_tree_imlementation.md  project_structure.md  todo.md
fclient/: .dockerignore  Cargo.toml  Dockerfile
fclient/src/: main.rs
fclient/src/consts/: mod.rs
fclient/src/db/: mod.rs
fclient/src/handlers/: get_file.rs  get_upload_form.rs  handle_upload.rs  mod.rs  show_uploads_list.rs
fclient/src/types/: mod.rs  upload_metadata.rs
fclient/src/ui/: mod.rs
fclient/task_client_db/: LOG
fserver/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
fserver/files/: 4437AB53B7D20D309CABAEE88375325904CF3B1A588C0E6E188CF6D2C236BCE3.json
fserver/src/: main.rs
fserver/src/consts/: mod.rs
fserver/src/db/: mod.rs
fserver/src/handlers/: mod.rs  retrieve.rs  upload.rs
fserver/task_db/: LOG.old
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/file/: hash.rs
shared/src/persistence/: level.rs
shared/src/tracing/: tracing.rs
shared/src/tree/: node.rs
shared/src/types/: error.rs
shared/test_data/: test_file.txt
task_client_db/: LOG  LOG.old
templates/: home.html  upload.html
