[package]
name = "fclient"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
shared = { path = "../shared" }
axum = { version = "0.6.20", features = ["multipart"] }
tower-http = { version = "0.4.0", features = ["limit", "trace"] }
tera = "1.19.1"
reqwest = { version = "0.11.20", features = ["multipart", "json"] }