[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
crypto = { version = "0.5.1", features = ["digest", ] }
sha2 = "0.10.7"
hex-literal = "0.4.1"
anyhow = "1.0.75"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
rusty-leveldb = "3.0.0"
axum = "0.6.20"